# HRMStore

./: .firebaserc  .gitignore  .protected-paths.regex  LICENSE  README.md  analysis_options.yaml  devtools_options.yaml  firebase.json  firestore.indexes.json  pubspec.yaml
.githooks/: pre-push
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json.example  key.properties.example  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
assets/hyperbridge/: hrmstore_dynamic_island.hbr
cloudflare/: wrangler.toml.example
docs/: cloudflare_notifications.md  code_overview.md
functions/: .env.example  .gitignore
ios/: .gitignore
ios/Flutter/: AppFrameworkInfo.plist  Release.xcconfig
ios/Runner/: AppDelegate.swift  GoogleService-Info.plist.example  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
ios/RunnerTests/: RunnerTests.swift
lib/: firebase_options.dart.example  main.dart  main_admin.dart
lib/app/: hrm_store_app.dart
lib/core/: app_info.dart  app_navigator.dart  constants.dart  order_status.dart  tt_colors.dart
lib/models/: game_package.dart
lib/services/: access_control_service.dart  admin_session_service.dart  app_check_service.dart  app_links_service.dart  availability_service.dart  (+19 more)
tools/: install_git_hooks.sh  setup_cloudflare_notifications.sh  untrack_protected_files.sh
web/: 404.html  index.html  manifest.json  privacy.html  robots.txt  sitemap.xml  tiktok-pixel.js
windows/: CMakeLists.txt
(+102 files in other folders)
